ultimos cambios cv

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
-*html{
-    font-size: 16px;
+*html {
+  font-size: 16px;
 }
-body { 
+body {
   font-family: "Roboto Mono", monospace !important;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -21,7 +21,7 @@ body {
 .navbar-brand img {
   display: block;
   width: 100px;
-  height:100px;
+  height: 100px;
 }
 
 #Hero-Section {
@@ -36,12 +36,12 @@ body {
   display: flex;
   align-items: flex-start;
   width: 100%;
-  font-size: 1.25rem; 
+  font-size: 1.25rem;
 }
 .section-heading {
   font-size: 3rem;
   display: flex;
-  position: relative
+  position: relative;
 }
 /* Dashed red border */
 .hr.new2 {
@@ -50,33 +50,77 @@ body {
 .section-heading-lg {
   font-size: 3rem;
 }
-.font-cursos{
-    font-size: 3rem !important; 
+.font-cursos {
+  font-size: 3rem !important;
 }
-.educacion{
-    margin: 50px;
-    padding: 50px;
+.educacion {
+  margin: 50px;
+  padding: 50px;
 }
-.carousel-inner{
-    width: 300px;
-    height: 500px;
+.carousel-inner {
+  width: 300px;
+  height: 500px;
 }
-.form-img{
-    float: left;
-    width: 600px;
-    height: 600px;
-    margin-left: 200px;
-    margin-top: 100px;
+.form-img {
+  float: left;
+  width: 600px;
+  height: 600px;
+  margin-left: 200px;
+  margin-top: 100px;
 }
-.container-form{
-    width: 1000px
-    
+.container-form {
+  width: 1000px;
 }
-.img-footer{
-    width: 20%;
-    height: 130px;
-    margin-bottom: 50px;
+.img-footer {
+  width: 20%;
+  height: 130px;
+  margin-bottom: 50px;
 }
-.h2-hablemos{
-    font-size: 6rem !important; 
+.h2-hablemos {
+  font-size: 6rem !important;
+}
+
+@media (max-width: 768px) {
+  header img {
+    width: 50vw;
+    margin-top: 50px;
+  }
+
+  header {
+    flex-wrap: wrap;
+  }
+
+  .educacion {
+    flex-wrap: wrap;
+  }
+
+  .educacion .list-educacion {
+    font-size: 1rem !important;
+  }
+
+  .educacion .list-educacion h3 {
+    font-size: 1rem !important;
+  }
+
+  .form-img {
+    width: 70vw;
+    height: auto;
+    margin-left: 0;
+    margin-bottom: 20px;
+    margin-top: 120px;
+  }
+
+  form u {
+    font-size: 3rem;
+  }
+
+  form h2.h2-hablemos {
+    display: block !important;
+    text-align: center;
+  }
+
+  .img-footer {
+    width: 50vw;
+    height: auto;
+  }
 }
